modular state estimator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ include_directories(
 set(SOURCE_FILES
     src/bebop2_controller_node.cpp localization/StateEstimation.cpp localization/StateEstimation.h include/bebop2_controller/robot_defs.h control/ControlViz.cpp control/ControlViz.h
     control/PID/PID.h control/PID/PID.cpp
-        control/ControllerBase.cpp control/ControllerBase.h)
+        control/ControllerBase.cpp control/ControllerBase.h localization/StateObserver.cpp localization/StateObserver.h localization/Filters/ComplementaryFilter.h localization/Sensors/ApriltagLandmarks.cpp localization/Sensors/ApriltagLandmarks.h)
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
