--- a/.github/workflows/doxygen-gh-pages.yml
+++ b/.github/workflows/doxygen-gh-pages.yml
@@ -1,50 +1,19 @@
-name: 'Doxygen GitHub Pages Deploy Action'
-author: 'Redwan Newaz'
-description: 'Make docs with Doxygen then deploy the generated HTML to GitHub pages'
-branding:
-  icon: "upload-cloud"
-  color: "purple"
+name: Doxygen GitHub Pages Deploy Action
 
-inputs:
-  github_token:
-    description: 'A GitHub token for pushing to the repo. Example: https://git.io/passing-token'
-    required: true
-  branch:
-    description: 'Branch name for pushing GitHub pages files'
-    required: true
-    default: "gh-pages"
-  folder:
-    description: 'Folder where Doxygen will generate the HTML build files'
-    required: true
-    default: "doxygen/html"
-  config_file:
-    description: 'Path of the Doxygen configuration file'
-    required: true
-    default: "Doxyfile"
+on:
+  push:
+    branches:
+      - dev
+      - doc
+  workflow_dispatch:
 
-runs:
-  using: "composite"
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-      with:
-        submodules: "true"
-
-    - name: Install Doxygen
-      run: sudo apt-get install doxygen graphviz -y
-      shell: bash
-
-    - name: Generate Doxygen Documentation
-      run: doxygen ${{ inputs.config_file }}
-      shell: bash
-      
-    - name: Create .nojekyll (ensures pages with underscores work on gh pages)
-      run: touch ${{ inputs.folder }}/.nojekyll
-      shell: bash
-
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        token: ${{ inputs.github_token }}
-        branch: ${{ inputs.branch }}
-        folder: ${{ inputs.folder }}
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: DenverCoder1/doxygen-github-pages-action@v1.2.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: docs/html
+          config_file: Doxyfile
