--- a/config/param.yaml
+++ b/config/param.yaml
@@ -2,9 +2,21 @@
 apriltags: [2, 4, 7]
 
 # the program will look for the tag index first to read each tag coordinate
-tag2: [5, 0, 0.95]
-tag4: [5, -2.05, 0.95]
-tag7: [5, -1.13, 0.95]
+#tag2: [5, 0, 0.95]
+#tag4: [5, -2.05, 0.95]
+#tag7: [5, -1.13, 0.95]
+
+#tag2: [-0.35, -2.05,  0.95, -1, -1, -1, 1]
+#tag4: [2.045,  0.2075, 0.95, -0.85, -0.85, 0.85, 1 ]
+#tag7: [2.06 , 1.037, 0.95, -0.9, 0.9, 0.9, 1]
+
+#tag2: [1.86, 0.31, 0.95, 2, -2, 0, 1]
+#tag4: [1.86, 0.0, 0.95, 1.75, 1.75, 0, 1 ]
+#tag7: [1.86, 1.045, 0.95, 1.86, -1.86, 0, 1]
+
+tag2: [1.86, 0.31, 0.95, 2, -2, 2, 1]
+tag4: [1.86, 0.0, 0.95, 1.75, 1.75, 1.75, 1 ]
+tag7: [1.86, 1.045, 0.95, 1.8, -1.8, 1.8, 1]
 
 # complimentary filter gain. Higher value slower update, less noisy
 alpha: 0.99
