--- a/config/param.yaml
+++ b/config/param.yaml
@@ -2,24 +2,13 @@
 apriltags: [2, 4, 7]
 
 # the program will look for the tag index first to read each tag coordinate
-#tag2: [5, 0, 0.95]
-#tag4: [5, -2.05, 0.95]
-#tag7: [5, -1.13, 0.95]
+tag2: [0.527691, 0.951328, 3.553110, -0.0860908, -0.5304828, 0.3275735, 0.777092]
+tag4: [-4.481725, -0.078901, 3.897531, 0.4560009, 0.471304, 0.5323045, 0.5353388 ]
+tag7: [-1.716379, -0.559175, 3.895554, -0.1103371, -0.6865848, 0.1305297, 0.7066747 ]
 
-#tag2: [-0.35, -2.05,  0.95, -1, -1, -1, 1]
-#tag4: [2.045,  0.2075, 0.95, -0.85, -0.85, 0.85, 1 ]
-#tag7: [2.06 , 1.037, 0.95, -0.9, 0.9, 0.9, 1]
-
-#tag2: [1.86, 0.31, 0.95, 2, -2, 0, 1]
-#tag4: [1.86, 0.0, 0.95, 1.75, 1.75, 0, 1 ]
-#tag7: [1.86, 1.045, 0.95, 1.86, -1.86, 0, 1]
-
-tag2: [1.86, 0.31, 0.95, 2, -2, 2, 1]
-tag4: [1.86, 0.0, 0.95, 1.75, 1.75, 1.75, 1 ]
-tag7: [1.86, 1.045, 0.95, 1.8, -1.8, 1.8, 1]
 
 # complimentary filter gain. Higher value slower update, less noisy
-alpha: 0.99
+alpha: 0.95
 
 #   linear.x  (+)      Translate forward
 #             (-)      Translate backward
