--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -1,5 +1,7 @@
 
-add_executable(test_odom odom_to_csv.cpp ../airlib/localization/Sensors/ApriltagLandmarks.cpp)
+add_executable(test_odom odom_to_csv.cpp
+        ../airlib/localization/Sensors/ApriltagLandmarksExtended.cpp
+        ../airlib/localization/Sensors/ApriltagLandmarks.cpp)
 target_link_libraries(test_odom ${catkin_LIBRARIES})
 
 add_executable(test_ekf test_ekf.cpp
@@ -13,4 +15,12 @@ add_executable(test_complimentary_filter test_complimentary_filter.cpp
         ../include/airlib/localization/Filters/ComplementaryFilter.h
         )
 target_link_libraries(test_complimentary_filter ${catkin_LIBRARIES})
+
+
+add_executable(test_robot_localization test_robot_localization.cpp
+        ../airlib/localization/Sensors/ApriltagLandmarksExtended.cpp
+        ../airlib/localization/Filters/RobotLocalization.cpp
+        )
+target_link_libraries(test_robot_localization ${catkin_LIBRARIES})
+
 
