--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,13 +78,13 @@ set(HEADER_FILES
         )
 
 add_library(airlibBebop2 ${SOURCE_FILES} ${HEADER_FILES} )
-target_link_libraries(airlibBebop2 Eigen3::Eigen ${catkin_LIBRARIES})
+target_link_libraries(airlibBebop2 Eigen3::Eigen ${catkin_LIBRARIES} -pthread)
 ## Declare a C++ executables
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(bebop2_controller_node src/bebop2_controller_node.cpp )
 ## Specify libraries to link a library or executable target against
-target_link_libraries(bebop2_controller_node airlibBebop2)
+target_link_libraries(bebop2_controller_node airlibBebop2 -pthread)
 
 option(BUILD_TESTS  "build unittest executables" OFF )
 
@@ -92,5 +92,5 @@ if(BUILD_TESTS)
  add_subdirectory(unittest)
 endif()
 
-add_subdirectory(bebop2_controller_gui)
+#add_subdirectory(bebop2_controller_gui)
 
