--- a/config/param.yaml
+++ b/config/param.yaml
@@ -1,11 +1,11 @@
 # make sure you define tag index before defining tag coordinates
-apriltags: [2, 4, 7]
+apriltags: [3, 2, 7, 4]
 
 # the program will look for the tag index first to read each tag coordinate
-tag2: [0.527691, 0.951328, 3.553110, -0.0860908, -0.5304828, 0.3275735, 0.777092]
-tag4: [-4.481725, -0.078901, 3.897531, 0.4560009, 0.471304, 0.5323045, 0.5353388 ]
-tag7: [-1.716379, -0.559175, 3.895554, -0.1103371, -0.6865848, 0.1305297, 0.7066747 ]
-
+tag3: [0.81, 7.0, 1.2]
+tag2: [1.96, 7.0, 1.2]
+tag7: [3.11, 7.0, 1.2]
+tag4: [4.26, 7.0, 1.2]
 
 # complimentary filter gain. Higher value slower update, less noisy
 alpha: 0.95
@@ -18,13 +18,6 @@ alpha: 0.95
 #             (-)      Descend
 #   angular.z (+)      Rotate counter clockwise -> (NEGATIVE gain)
 #             (-)      Rotate clockwise
-
-# pid_gains: [
-#   0.50, 0.70, 0,
-#  -0.50, -0.70, 0,
-#   0.50, 0.70, 0,
-#   0.0, 0, 0
-# ]
 
 
 pid_gains: [
