--- a/config/ekf.yaml
+++ b/config/ekf.yaml
@@ -26,7 +26,7 @@ transform_timeout: 0.0
 
 # If you're having trouble, try setting this to true, and then echo the /diagnostics_agg topic to see if the node is
 # unhappy with any settings or data.
-print_diagnostics: true
+print_diagnostics: false
 
 # Debug settings. Not for the faint of heart. Outputs a ludicrous amount of information to the file specified by
 # debug_out_file. I hope you like matrices! Please note that setting this to true will have strongly deleterious
@@ -65,7 +65,7 @@ permit_corrected_publication: false
 #     3b. MAKE SURE something else is generating the odom->base_link transform. Note that this can even be another state
 #         estimation node from robot_localization! However, that instance should *not* fuse the global data.
 map_frame: map              # Defaults to "map" if unspecified
-odom_frame: map            # Defaults to "odom" if unspecified
+odom_frame: odom            # Defaults to "odom" if unspecified
 base_link_frame: ekf/base_link  # Defaults to "base_link" if unspecified
 world_frame: map           # Defaults to the value of odom_frame if unspecified
 
