--- a/config/param.yaml
+++ b/config/param.yaml
@@ -20,13 +20,19 @@ alpha: 0.95
 #             (-)      Rotate clockwise
 
 
-pid_gains: [
-  0.07, 0.010, 0.0,
-  0.07, 0.010, 0.0,
-  0.07, 0.010, 0.0,
-  0.08, 0.010, 0.0
-]
+#pid_gains: [
+#  0.07, 0.010, 0.0,
+#  0.07, 0.010, 0.0,
+#  0.07, 0.010, 0.0,
+#  0.08, 0.010, 0.0
+#]0.000625
 
+pid_gains: [
+  0.08, 0.002, 0.000625,
+  0.08, 0.002, 0.000625,
+  0.08, 0.002, 0.000625,
+  0.08, 0.002, 0.000625
+]
 
 # set the control loop duration default 30 Hz -> 0.03
 dt: 0.03
