--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,12 @@ add_executable( bebop2_controller_test
         ${navigation_HEADER_FILES} ${navigation_SRC_FILES}
         ${controller_HEADER_FILES} ${controller_SRC_FILES}
 )
-target_link_libraries(bebop2_controller_test Catch Eigen3::Eigen ${catkin_LIBRARIES} -pthread)
+target_link_libraries(bebop2_controller_test Catch Eigen3::Eigen
+        ${catkin_LIBRARIES}
+        airlib_percept
+        airlib_nav
+        airlib_control
+        -pthread)
 
 enable_testing()
 add_test( NAME bebop2_controller_test COMMAND bebop2_controller_test )
