heading needs to be corrected

--- a/controller/CMakeLists.txt
+++ b/controller/CMakeLists.txt
@@ -23,10 +23,12 @@ add_executable(bebop2_controller_node interface/bebop2_controller_node.cpp
 target_link_libraries(bebop2_controller_node
         ${catkin_LIBRARIES}
         Eigen3::Eigen
+        airlib_model
         -pthread)
 
 add_library(airlib_control ${controller_HEADER_FILES} ${controller_SRC_FILES})
 target_link_libraries(airlib_control
         ${catkin_LIBRARIES}
         Eigen3::Eigen
+        airlib_model
         -pthread)
