lqr tested in sim

--- a/config/param.yaml
+++ b/config/param.yaml
@@ -26,12 +26,24 @@ alpha: 0.95 #0.94
 #  0.07, 0.010, 0.0,
 #  0.08, 0.010, 0.0
 #]0.000625
+controller: "lqr"
 
 pid_gains: [
   0.075, -0.001, -0.0003,
   0.075, 0.00075, -0.0001,
   0.085, -0.001, -0.0001,
   0.08, -0.002, 0.0
+]
+
+lqr_gains: [
+  0.075, 0.0, 0.0, 0.0, 0.001, 0.0, 0.0, 0.0,
+  0.0, 0.075, 0.0, 0.0, 0.0, 0.00075, 0.0, 0.0,
+  0.0, 0.0, 0.085, 0.0, 0.0, 0.0, 0.001, 0.0,
+  0.0, 0.0, 0.0, 0.08, 0.0, 0.0, 0.0, 0.002,
+  0.0, 0.0, 0.0, 0.0, 0.001, 0.0, 0.0, 0.0,
+  0.0, 0.0, 0.0, 0.0, 0.0, 0.00075, 0.0, 0.0,
+  0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.001, 0.0,
+  0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.002
 ]
 
 # set the control loop duration default 30 Hz -> 0.03
