--- a/config/param.yaml
+++ b/config/param.yaml
@@ -2,17 +2,17 @@
 apriltags: [3, 62, 2, 63, 7, 67, 4, 64]
 
 # the program will look for the tag index first to read each tag coordinate
-tag3: [0.78, 7.0, 1.2]
-tag62: [1.44, 7.0, 1.2]
-tag2: [2.06, 7.0, 1.2]
-tag63: [2.66, 7.0, 1.2]
-tag7: [3.26, 7.0, 1.2]
-tag67: [3.88, 7.0, 1.2]
-tag4: [4.48, 7.0, 1.2]
-tag64: [5.11, 7.0, 1.2]
+tag3: [0.81, 7.5, 1.28]
+tag62: [1.49, 7.5, 1.28]
+tag2: [2.11, 7.5, 1.28]
+tag63: [2.71, 7.5, 1.28]
+tag7: [3.31, 7.5, 1.28]
+tag67: [3.93, 7.5, 1.28]
+tag4: [4.53, 7.5, 1.28]
+tag64: [5.16, 7.5, 1.28]
 
 # complimentary filter gain. Higher value slower update, less noisy
-alpha: 0.955 #0.94
+alpha: 0.96 #0.94
 
 #   linear.x  (+)      Translate forward
 #             (-)      Translate backward
@@ -30,7 +30,11 @@ alpha: 0.955 #0.94
 #  0.07, 0.010, 0.0,
 #  0.08, 0.010, 0.0
 #]0.000625
-controller: "lqr"
+
+
+# controller: "lqr"
+controller: "pid"
+
 
 pid_gains: [
   0.075, -0.001, -0.0003,
