--- a/config/param.yaml
+++ b/config/param.yaml
@@ -1,6 +1,6 @@
 # make sure you define tag index before defining tag coordinates
 apriltags: [3, 62, 2, 63, 7, 67, 4, 64]
-
+boundary: [-2.773, -2.356, 5.527, 5.0355]
 # the program will look for the tag index first to read each tag coordinate
 tag3: [0.81, 7.5, 1.28]
 tag62: [1.49, 7.5, 1.28]
@@ -32,8 +32,8 @@ alpha: 0.96 #0.94
 #]0.000625
 
 
-# controller: "lqr"
-controller: "pid"
+controller: "lqr"
+# controller: "pid"
 
 
 pid_gains: [
@@ -57,10 +57,10 @@ lqr_gains: [
 # set the control loop duration default 30 Hz -> 0.03
 dt: 0.03
 # set hovering region
-goal_thres: 0.6
+goal_thres: 0.345
 
 # trajectory param
 #max_vel: 2
 #max_acc: 3
-max_vel: 0.9
-max_acc: 0.8
+max_vel: 3.0
+max_acc: 0.4
